--- a/spec/importers/screening_list/el/results.yaml
+++ b/spec/importers/screening_list/el/results.yaml
@@ -52,14 +52,14 @@
     :state: 
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
-  :name_idx: Fazel Khalil Construction Company
-  :rev_name: Company Construction Khalil Fazel
-  :trim_name: FazelKhalilConstructionCompany
-  :trim_rev_name: CompanyConstructionKhalilFazel
-  :name_no_common: Fazel Khalil Construction
-  :rev_name_no_common: Construction Khalil Fazel
-  :trim_name_no_common: FazelKhalilConstruction
-  :trim_rev_name_no_common: ConstructionKhalilFazel
+  :name_idx: Fazel Khalil Construction
+  :name_with_common: Fazel Khalil Construction Company
+  :rev_name_with_common: Company Construction Khalil Fazel
+  :trim_name_with_common: FazelKhalilConstructionCompany
+  :trim_rev_name_with_common: CompanyConstructionKhalilFazel
+  :rev_name: Construction Khalil Fazel
+  :trim_name: FazelKhalilConstruction
+  :trim_rev_name: ConstructionKhalilFazel
 - :name: Zurmat Construction Company offices
   :federal_register_notice: 77 FR 25055
   :start_date: '2012-04-27'
@@ -108,14 +108,14 @@
     :state:
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
-  :name_idx: Zurmat Construction Company offices
-  :rev_name: offices Company Construction Zurmat
-  :trim_name: ZurmatConstructionCompanyoffices
-  :trim_rev_name: officesCompanyConstructionZurmat
-  :name_no_common: Zurmat Construction offices
-  :rev_name_no_common: offices Construction Zurmat
-  :trim_name_no_common: ZurmatConstructionoffices
-  :trim_rev_name_no_common: officesConstructionZurmat
+  :name_idx: Zurmat Construction offices
+  :name_with_common: Zurmat Construction Company offices
+  :rev_name_with_common: offices Company Construction Zurmat
+  :trim_name_with_common: ZurmatConstructionCompanyoffices
+  :trim_rev_name_with_common: officesCompanyConstructionZurmat
+  :rev_name: offices Construction Zurmat
+  :trim_name: ZurmatConstructionoffices
+  :trim_rev_name: officesConstructionZurmat
 - :name: Murat Peker
   :federal_register_notice: '78 FR 75485 '
   :start_date: '2013-12-12'
