--- a/spec/importers/screening_list/sdn/results.yaml
+++ b/spec/importers/screening_list/sdn/results.yaml
@@ -113,10 +113,10 @@
     :issue_date: '2001-10-01'
     :number: A0181988
     :type: Passport
-  :name_idx: JIM ALE Ahmed Nur Ali
-  :rev_name: Ali Nur Ahmed ALE JIM
+  :name_idx: JIMALE Ahmed Nur Ali
+  :rev_name: Ali Nur Ahmed JIMALE
   :trim_name: JIMALEAhmedNurAli
-  :trim_rev_name: AliNurAhmedALEJIM
+  :trim_rev_name: AliNurAhmedJIMALE
   :alt_names_idx: 
   - JUMALI Ahmed Ali
   - JIMALE Ahmad Ali
