--- a/spec/importers/screening_list/uvl/results.yaml
+++ b/spec/importers/screening_list/uvl/results.yaml
@@ -8,19 +8,19 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Room 2135, Jingxin Building A, No Dong San Huan North Road, Beijing
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: CN
   :alt_names: []
-  :name_idx: China National Plant Import Export
-  :name_with_common: China National Plant Import Export Co
-  :rev_name_with_common: Co Export Import Plant National China
+  :name_idx: China National Plant ImportExport
+  :name_with_common: China National Plant ImportExport Co
+  :rev_name_with_common: Co ImportExport Plant National China
   :trim_name_with_common: ChinaNationalPlantImportExportCo
-  :trim_rev_name_with_common: CoExportImportPlantNationalChina
-  :rev_name: Export Import Plant National China
+  :trim_rev_name_with_common: CoImportExportPlantNationalChina
+  :rev_name: ImportExport Plant National China
   :trim_name: ChinaNationalPlantImportExport
-  :trim_rev_name: ExportImportPlantNationalChina
+  :trim_rev_name: ImportExportPlantNationalChina
 - :name: Brilliance Technology Ltd
   :id: cc91dc115ff25e9f2e3cab1b9d8adf75f5956982
   :source: *1
@@ -28,14 +28,14 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Flat A, 11/F, Adolfo Mansion, 114-116 Austin Road, Tsim Sha Tsui, Kowloon
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   - :address: Rm 1203, 12/F, Hip Kwan Commercial Bldg, 38 Pitt Street, Yau Ma Tei
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names: []
   :name_idx: Brilliance Technology
@@ -53,9 +53,9 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Unit 2209, 22/F, Wu Chung House, 213 Queen's Road East, Wanchai
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names: []
   :name_idx: Dynasense Photonics
@@ -72,26 +72,27 @@
   :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
-  - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong, Kowloon
-    :city:
-    :state:
-    :postal_code:
+  - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong,
+      Kowloon
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   - :address: Room 603, 6/F, Hang Pont Commercial Building, 31 Tonking Street, Cheung
       Sha Wan, Kowloon
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names: []
-  :name_idx: Hi Shine Technology HK
-  :name_with_common: Hi Shine Technology HK Limited
-  :rev_name_with_common: Limited HK Technology Shine Hi
+  :name_idx: HiShine Technology HK
+  :name_with_common: HiShine Technology HK Limited
+  :rev_name_with_common: Limited HK Technology HiShine
   :trim_name_with_common: HiShineTechnologyHKLimited
-  :trim_rev_name_with_common: LimitedHKTechnologyShineHi
-  :rev_name: HK Technology Shine Hi
+  :trim_rev_name_with_common: LimitedHKTechnologyHiShine
+  :rev_name: HK Technology HiShine
   :trim_name: HiShineTechnologyHK
-  :trim_rev_name: HKTechnologyShineHi
+  :trim_rev_name: HKTechnologyHiShine
 - :name: Hong Kong Haimao Info-Tec Development Co Ltd
   :id: b7b7b4366f4441a70c163fe63706375ac2d4d520
   :source: *1
@@ -99,19 +100,19 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Rm 1013B, Well Fung Ind. Center, Ta Chuen Ping Street, Kwai Chung
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names: []
-  :name_idx: Hong Kong Haimao Info Tec Development
-  :name_with_common: Hong Kong Haimao Info Tec Development Co Ltd
-  :rev_name_with_common: Ltd Co Development Tec Info Haimao Kong Hong
+  :name_idx: Hong Kong Haimao InfoTec Development
+  :name_with_common: Hong Kong Haimao InfoTec Development Co Ltd
+  :rev_name_with_common: Ltd Co Development InfoTec Haimao Kong Hong
   :trim_name_with_common: HongKongHaimaoInfoTecDevelopmentCoLtd
-  :trim_rev_name_with_common: LtdCoDevelopmentTecInfoHaimaoKongHong
-  :rev_name: Development Tec Info Haimao Kong Hong
+  :trim_rev_name_with_common: LtdCoDevelopmentInfoTecHaimaoKongHong
+  :rev_name: Development InfoTec Haimao Kong Hong
   :trim_name: HongKongHaimaoInfoTecDevelopment
-  :trim_rev_name: DevelopmentTecInfoHaimaoKongHong
+  :trim_rev_name: DevelopmentInfoTecHaimaoKongHong
 - :name: Lianqi (HK) Electronics Co Ltd
   :id: 93d5f755bf946ab838126ffa4cee213d6e55e806
   :source: *1
@@ -119,9 +120,9 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Unit N, 3/F, Hopewell House, 175 Hip Wo Street, KwunTong, Kowloon
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names: []
   :name_idx: Lianqi HK Electronics
@@ -139,9 +140,9 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Unit N, 3/F, Hopewell House, 175 Hip Wo Street, KwunTong, Kowloon
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: HK
   :alt_names: []
   :name_idx: Lion Chip Electronics
@@ -159,14 +160,14 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   - :address: Novoslobodskaya Str. 14/19, Moscow
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   :alt_names: []
   :name_idx: Security 2 Business Academy
@@ -180,14 +181,14 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   - :address: Novoslobodskaya Str. 14/19, Moscow
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   :alt_names: []
   :name_idx: S2BA
@@ -201,14 +202,14 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   - :address: Novoslobodskaya Str. 14/19, Moscow
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   :alt_names: []
   :name_idx: Academy of Business Security
@@ -222,9 +223,9 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 30, Moscow, Russia
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   :alt_names: []
   :name_idx: T2BA
@@ -238,22 +239,21 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 20, Moscow, Russia
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   - :address: Novoslobodskaya Str. 24/29, Moscow, Russia
-    :city:
-    :state:
-    :postal_code:
+    :city: 
+    :state: 
+    :postal_code: 
     :country: RU
   :alt_names:
   - Training 2 Business Academy
   - T2BA
   - Academy of Business Training
-  :name_idx:
-   Training 2 Business Academy a k a T2BA a k a Academy of Business Training
-  :rev_name: Training Business of Academy a k a T2BA a k a Academy Business 2 Training
+  :name_idx: Training 2 Business Academy aka T2BA aka Academy of Business Training
+  :rev_name: Training Business of Academy aka T2BA aka Academy Business 2 Training
   :trim_name: Training2BusinessAcademyakaT2BAakaAcademyofBusinessTraining
   :trim_rev_name: TrainingBusinessofAcademyakaT2BAakaAcademyBusiness2Training
   :alt_names_idx:
