Remove category restrictions from Emenu Bsp

--- a/spec/importers/emenu_bsp/emenu_bsp_articles.yaml
+++ b/spec/importers/emenu_bsp/emenu_bsp_articles.yaml
@@ -56,5 +56,5 @@
   :ita_office: United Kingdom
   :contact_title: Dr
   :contact_name: Aidan Turnbull
-  :category: null
+  :category: Business Associations
   :id: 92eb24c5b694eca407ee45154f3bc08df9d5c4e8
