--- a/spec/importers/screening_list/part561/results.yaml
+++ b/spec/importers/screening_list/part561/results.yaml
@@ -20,7 +20,7 @@
   :type: Entity
   :alt_names:
   - KARAMAY URBAN CREDIT COOPERATIVES
-  - KARAMAY CITY COMMERCIAL BANK
+  - KARAMAY CITY COMMERCIAL BANK CO LTD.
   :programs:
   - 561List
   :nationalities: []
@@ -65,7 +65,7 @@
   :trim_rev_name: KUNLUNOFBANK  
   :alt_names_idx:
   - KARAMAY URBAN CREDIT COOPERATIVES
-  - KARAMAY CITY COMMERCIAL BANK CO LTD
+  - KARAMAY CITY COMMERCIAL BANK
   :alt_names_with_common: 
   - KARAMAY URBAN CREDIT COOPERATIVES
   - KARAMAY CITY COMMERCIAL BANK CO LTD
@@ -80,10 +80,10 @@
   - KARAMAYCITYCOMMERCIALBANKCOLTD
   :rev_alt_names:
   - COOPERATIVES CREDIT URBAN KARAMAY
-  - LTD CO BANK COMMERCIAL CITY KARAMAY
+  - BANK COMMERCIAL CITY KARAMAY
   :trim_alt_names:
   - KARAMAYURBANCREDITCOOPERATIVES
-  - KARAMAYCITYCOMMERCIALBANKCOLTD
+  - KARAMAYCITYCOMMERCIALBANK
   :trim_rev_alt_names:
   - COOPERATIVESCREDITURBANKARAMAY
-  - LTDCOBANKCOMMERCIALCITYKARAMAY
+  - BANKCOMMERCIALCITYKARAMAY
