--- a/spec/importers/screening_list/el/results.yaml
+++ b/spec/importers/screening_list/el/results.yaml
@@ -27,13 +27,13 @@
     :code: EL
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Fazal Rahim Farid
-  :rev_name: Farid Rahim Fazal
-  :trim_name: FazalRahimFarid
-  :trim_rev_name: FaridRahimFazal
-  :alt_names_idx: [Fazel Rahim Farid, Farid, Engineer Idris]
-  :rev_alt_names: [Farid Rahim Fazel, Farid, Idris Engineer]
-  :trim_alt_names: [FazelRahimFarid, Farid, EngineerIdris]
-  :trim_rev_alt_names: [FaridRahimFazel, Farid, IdrisEngineer]
+  :name_rev: Farid Rahim Fazal
+  :name_trim: FazalRahimFarid
+  :name_trim_rev: FaridRahimFazal
+  :alt_idx: [Fazel Rahim Farid, Farid, Engineer Idris]
+  :alt_rev: [Farid Rahim Fazel, Farid, Idris Engineer]
+  :alt_trim: [FazelRahimFarid, Farid, EngineerIdris]
+  :alt_trim_rev: [FaridRahimFazel, Farid, IdrisEngineer]
 - :name: Fazel Khalil Construction Company
   :federal_register_notice: 77 FR 25055
   :start_date: '2012-04-27'
@@ -54,12 +54,12 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Fazel Khalil Construction
   :name_with_common: Fazel Khalil Construction Company
-  :rev_name_with_common: Company Construction Khalil Fazel
-  :trim_name_with_common: FazelKhalilConstructionCompany
-  :trim_rev_name_with_common: CompanyConstructionKhalilFazel
-  :rev_name: Construction Khalil Fazel
-  :trim_name: FazelKhalilConstruction
-  :trim_rev_name: ConstructionKhalilFazel
+  :name_rev_with_common: Company Construction Khalil Fazel
+  :name_trim_with_common: FazelKhalilConstructionCompany
+  :name_trim_rev_with_common: CompanyConstructionKhalilFazel
+  :name_rev: Construction Khalil Fazel
+  :name_trim: FazelKhalilConstruction
+  :name_trim_rev: ConstructionKhalilFazel
 - :name: Zurmat Construction Company offices
   :federal_register_notice: 77 FR 25055
   :start_date: '2012-04-27'
@@ -110,12 +110,12 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Zurmat Construction offices
   :name_with_common: Zurmat Construction Company offices
-  :rev_name_with_common: offices Company Construction Zurmat
-  :trim_name_with_common: ZurmatConstructionCompanyoffices
-  :trim_rev_name_with_common: officesCompanyConstructionZurmat
-  :rev_name: offices Construction Zurmat
-  :trim_name: ZurmatConstructionoffices
-  :trim_rev_name: officesConstructionZurmat
+  :name_rev_with_common: offices Company Construction Zurmat
+  :name_trim_with_common: ZurmatConstructionCompanyoffices
+  :name_trim_rev_with_common: officesCompanyConstructionZurmat
+  :name_rev: offices Construction Zurmat
+  :name_trim: ZurmatConstructionoffices
+  :name_trim_rev: officesConstructionZurmat
 - :name: Murat Peker
   :federal_register_notice: '78 FR 75485 '
   :start_date: '2013-12-12'
@@ -134,9 +134,9 @@
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Murat Peker
-  :rev_name: Peker Murat
-  :trim_name: MuratPeker
-  :trim_rev_name: PekerMurat
+  :name_rev: Peker Murat
+  :name_trim: MuratPeker
+  :name_trim_rev: PekerMurat
 - :name: Qazi Abdallah
   :federal_register_notice: 76 FR 71867
   :start_date: '2011-11-21'
@@ -156,13 +156,13 @@
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Qazi Abdallah
-  :rev_name: Abdallah Qazi
-  :trim_name: QaziAbdallah
-  :trim_rev_name: AbdallahQazi
-  :alt_names_idx: [Jawid Said Jan AbdalSalam]
-  :rev_alt_names: [AbdalSalam Jan Said Jawid]
-  :trim_alt_names: [JawidSaidJanAbdalSalam]
-  :trim_rev_alt_names: [AbdalSalamJanSaidJawid]
+  :name_rev: Abdallah Qazi
+  :name_trim: QaziAbdallah
+  :name_trim_rev: AbdallahQazi
+  :alt_idx: [Jawid Said Jan AbdalSalam]
+  :alt_rev: [AbdalSalam Jan Said Jawid]
+  :alt_trim: [JawidSaidJanAbdalSalam]
+  :alt_trim_rev: [AbdalSalamJanSaidJawid]
 - :name: Qazi Abdallah
   :federal_register_notice: 76 FR 10001
   :start_date: '2011-11-21'
@@ -182,13 +182,13 @@
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Qazi Abdallah
-  :rev_name: Abdallah Qazi
-  :trim_name: QaziAbdallah
-  :trim_rev_name: AbdallahQazi
-  :alt_names_idx: [Jawid Said Jan AbdalSalam]
-  :rev_alt_names: [AbdalSalam Jan Said Jawid]
-  :trim_alt_names: [JawidSaidJanAbdalSalam]
-  :trim_rev_alt_names: [AbdalSalamJanSaidJawid]
+  :name_rev: Abdallah Qazi
+  :name_trim: QaziAbdallah
+  :name_trim_rev: AbdallahQazi
+  :alt_idx: [Jawid Said Jan AbdalSalam]
+  :alt_rev: [AbdalSalam Jan Said Jawid]
+  :alt_trim: [JawidSaidJanAbdalSalam]
+  :alt_trim_rev: [AbdalSalamJanSaidJawid]
 - :name: Qazi Abdallah
   :federal_register_notice: 76 FR 71867
   :start_date: '2011-11-22'
@@ -208,10 +208,10 @@
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
   :name_idx: Qazi Abdallah
-  :rev_name: Abdallah Qazi
-  :trim_name: QaziAbdallah
-  :trim_rev_name: AbdallahQazi
-  :alt_names_idx: [Jawid Said Jan AbdalSalam]
-  :rev_alt_names: [AbdalSalam Jan Said Jawid]
-  :trim_alt_names: [JawidSaidJanAbdalSalam]
-  :trim_rev_alt_names: [AbdalSalamJanSaidJawid]
+  :name_rev: Abdallah Qazi
+  :name_trim: QaziAbdallah
+  :name_trim_rev: AbdallahQazi
+  :alt_idx: [Jawid Said Jan AbdalSalam]
+  :alt_rev: [AbdalSalam Jan Said Jawid]
+  :alt_trim: [JawidSaidJanAbdalSalam]
+  :alt_trim_rev: [AbdalSalamJanSaidJawid]
