--- a/spec/importers/screening_list/fse/results.yaml
+++ b/spec/importers/screening_list/fse/results.yaml
@@ -45,28 +45,28 @@
     :type: Executive Order 13645 Determination -
   :name_idx: FERLAND
   :name_with_common: FERLAND COMPANY LIMITED
-  :rev_name_with_common: LIMITED COMPANY FERLAND
-  :trim_name_with_common: FERLANDCOMPANYLIMITED
-  :trim_rev_name_with_common: LIMITEDCOMPANYFERLAND
-  :rev_name: FERLAND
-  :trim_name: FERLAND
-  :trim_rev_name: FERLAND
-  :alt_names_idx: [FERLAND]
-  :alt_names_with_common: [FERLAND CO LTD]
-  :rev_alt_with_common: [FERLAND CO LTD]
-  :trim_alt_with_common: [FERLANDCOLTD]
-  :trim_rev_alt_with_common: [FERLANDCOLTD]
-  :rev_alt_names: [FERLAND]
-  :trim_alt_names: [FERLAND]
-  :trim_rev_alt_names: [FERLAND]
+  :name_rev_with_common: LIMITED COMPANY FERLAND
+  :name_trim_with_common: FERLANDCOMPANYLIMITED
+  :name_trim_rev_with_common: LIMITEDCOMPANYFERLAND
+  :name_rev: FERLAND
+  :name_trim: FERLAND
+  :name_trim_rev: FERLAND
+  :alt_idx: [FERLAND]
+  :alt_with_common: [FERLAND CO LTD]
+  :alt_rev_with_common: [LTD CO FERLAND]
+  :alt_trim_with_common: [FERLANDCOLTD]
+  :alt_trim_rev_with_common: [LTDCOFERLAND]
+  :alt_rev: [FERLAND]
+  :alt_trim: [FERLAND]
+  :alt_trim_rev: [FERLAND]
 - :entity_number: '16422'
   :title: General Manager of Ferland Company Limited
   :call_sign: 
-  :vessel_type: 
-  :gross_tonnage: 
+  :vessel_type:
+  :gross_tonnage:
   :gross_registered_tonnage: 
-  :vessel_flag: 
-  :vessel_owner: 
+  :vessel_flag:
+  :vessel_owner:
   :remarks: '(Linked To: FERLAND COMPANY LIMITED)'
   :id: '16422'
   :source: *1
@@ -103,13 +103,13 @@
     :number: Material Support
     :type: Executive Order 13645 Determination -
   :name_idx: SOKOLENKO Vitaly
-  :rev_name: Vitaly SOKOLENKO
-  :trim_name: SOKOLENKOVitaly
-  :trim_rev_name: VitalySOKOLENKO
-  :alt_names_idx: [SOKOLENKO Vitalii, SOKOLENKO Vitaliy]
-  :rev_alt_names: [Vitalii SOKOLENKO, Vitaliy SOKOLENKO]
-  :trim_alt_names: [SOKOLENKOVitalii, SOKOLENKOVitaliy]
-  :trim_rev_alt_names: [VitaliiSOKOLENKO, VitaliySOKOLENKO]
+  :name_rev: Vitaly SOKOLENKO
+  :name_trim: SOKOLENKOVitaly
+  :name_trim_rev: VitalySOKOLENKO
+  :alt_idx: [SOKOLENKO Vitalii, SOKOLENKO Vitaliy]
+  :alt_rev: [Vitalii SOKOLENKO, Vitaliy SOKOLENKO]
+  :alt_trim: [SOKOLENKOVitalii, SOKOLENKOVitaliy]
+  :alt_trim_rev: [VitaliiSOKOLENKO, VitaliySOKOLENKO]
 - :entity_number: '16531'
   :title: 
   :call_sign: 
@@ -147,10 +147,10 @@
     :number: R17550559
     :type: Passport
   :name_idx: HOSSEINPOUR Houshang
-  :rev_name: Houshang HOSSEINPOUR
-  :trim_name: HOSSEINPOURHoushang
-  :trim_rev_name: HoushangHOSSEINPOUR
-  :alt_names_idx: [HOSSEINPOUR Houshang Shahali, HOSEINPUR Houshang]
-  :rev_alt_names: [Shahali Houshang HOSSEINPOUR, Houshang HOSEINPUR]
-  :trim_alt_names: [HOSSEINPOURHoushangShahali, HOSEINPURHoushang]
-  :trim_rev_alt_names: [ShahaliHoushangHOSSEINPOUR, HoushangHOSEINPUR]    
+  :name_rev: Houshang HOSSEINPOUR
+  :name_trim: HOSSEINPOURHoushang
+  :name_trim_rev: HoushangHOSSEINPOUR
+  :alt_idx: [HOSSEINPOUR Houshang Shahali, HOSEINPUR Houshang]
+  :alt_rev: [Shahali Houshang HOSSEINPOUR, Houshang HOSEINPUR]
+  :alt_trim: [HOSSEINPOURHoushangShahali, HOSEINPURHoushang]
+  :alt_trim_rev: [ShahaliHoushangHOSSEINPOUR, HoushangHOSEINPUR]
