--- a/spec/importers/screening_list/plc/results.yaml
+++ b/spec/importers/screening_list/plc/results.yaml
@@ -30,13 +30,13 @@
   :addresses: []
   :ids: []
   :name_idx: HANIYA Ismail Abdul Salah
-  :rev_name: Salah Abdul Ismail HANIYA
-  :trim_name: HANIYAIsmailAbdulSalah
-  :trim_rev_name: SalahAbdulIsmailHANIYA
-  :alt_names_idx: [HANIYA Ismail, HANIYYA Ismaeel]
-  :rev_alt_names: [Ismail HANIYA, Ismaeel HANIYYA]
-  :trim_alt_names: [HANIYAIsmail, HANIYYAIsmaeel]
-  :trim_rev_alt_names: [IsmailHANIYA, IsmaeelHANIYYA]
+  :name_rev: Salah Abdul Ismail HANIYA
+  :name_trim: HANIYAIsmailAbdulSalah
+  :name_trim_rev: SalahAbdulIsmailHANIYA
+  :alt_idx: [HANIYA Ismail, HANIYYA Ismaeel]
+  :alt_rev: [Ismail HANIYA, Ismaeel HANIYYA]
+  :alt_trim: [HANIYAIsmail, HANIYYAIsmaeel]
+  :alt_trim_rev: [IsmailHANIYA, IsmaeelHANIYYA]
 - :entity_number: '9674'
   :title:
   :call_sign:
@@ -66,16 +66,16 @@
   :addresses: []
   :ids: []
   :name_idx: QFEISHEH Hatem
-  :rev_name: Hatem QFEISHEH
-  :trim_name: QFEISHEHHatem
-  :trim_rev_name: HatemQFEISHEH
-  :alt_names_idx: 
+  :name_rev: Hatem QFEISHEH
+  :name_trim: QFEISHEHHatem
+  :name_trim_rev: HatemQFEISHEH
+  :alt_idx:
    [KAFEESHEH Hatem Rabah, QEFEISHA Hatem, ABU ANED Hadj Hatem]
-  :rev_alt_names: 
+  :alt_rev:
    [Rabah Hatem KAFEESHEH, Hatem QEFEISHA, Hatem Hadj ANED ABU]
-  :trim_alt_names: 
+  :alt_trim:
    [KAFEESHEHHatemRabah, QEFEISHAHatem, ABUANEDHadjHatem]
-  :trim_rev_alt_names: 
+  :alt_trim_rev:
    [RabahHatemKAFEESHEH, HatemQEFEISHA, HatemHadjANEDABU]  
 - :entity_number: '9688'
   :title:
@@ -109,13 +109,13 @@
     :address:
   :ids: []
   :name_idx: YAHIA Khaled Abed
-  :rev_name: Abed Khaled YAHIA
-  :trim_name: YAHIAKhaledAbed
-  :trim_rev_name: AbedKhaledYAHIA
-  :alt_names_idx: [YEHIA Khaled Said]
-  :rev_alt_names: [Said Khaled YEHIA]
-  :trim_alt_names: [YEHIAKhaledSaid]
-  :trim_rev_alt_names: [SaidKhaledYEHIA]  
+  :name_rev: Abed Khaled YAHIA
+  :name_trim: YAHIAKhaledAbed
+  :name_trim_rev: AbedKhaledYAHIA
+  :alt_idx: [YEHIA Khaled Said]
+  :alt_rev: [Said Khaled YEHIA]
+  :alt_trim: [YEHIAKhaledSaid]
+  :alt_trim_rev: [SaidKhaledYEHIA]
 - :entity_number: '9705'
   :title:
   :call_sign:
@@ -145,13 +145,13 @@
   :addresses: []
   :ids: []
   :name_idx: SALEH Jamal
-  :rev_name: Jamal SALEH
-  :trim_name: SALEHJamal
-  :trim_rev_name: JamalSALEH
-  :alt_names_idx: [NASSER Jamal Talab Mohammad Saleh, SALEH Jamal Talab]
-  :rev_alt_names: [Saleh Mohammad Talab Jamal NASSER, Talab Jamal SALEH]
-  :trim_alt_names: [NASSERJamalTalabMohammadSaleh, SALEHJamalTalab]
-  :trim_rev_alt_names: [SalehMohammadTalabJamalNASSER, TalabJamalSALEH]  
+  :name_rev: Jamal SALEH
+  :name_trim: SALEHJamal
+  :name_trim_rev: JamalSALEH
+  :alt_idx: [NASSER Jamal Talab Mohammad Saleh, SALEH Jamal Talab]
+  :alt_rev: [Saleh Mohammad Talab Jamal NASSER, Talab Jamal SALEH]
+  :alt_trim: [NASSERJamalTalabMohammadSaleh, SALEHJamalTalab]
+  :alt_trim_rev: [SalehMohammadTalabJamalNASSER, TalabJamalSALEH]
 - :entity_number: '9712'
   :title:
   :call_sign:
@@ -179,13 +179,13 @@
   :addresses: []
   :ids: []
   :name_idx: SHIHAB Mohammed
-  :rev_name: Mohammed SHIHAB
-  :trim_name: SHIHABMohammed
-  :trim_rev_name: MohammedSHIHAB
-  :alt_names_idx: [SHEHAB Mohamed Abed Hadi Rahman]
-  :rev_alt_names: [Rahman Hadi Abed Mohamed SHEHAB]
-  :trim_alt_names: [SHEHABMohamedAbedHadiRahman]
-  :trim_rev_alt_names: [RahmanHadiAbedMohamedSHEHAB]  
+  :name_rev: Mohammed SHIHAB
+  :name_trim: SHIHABMohammed
+  :name_trim_rev: MohammedSHIHAB
+  :alt_idx: [SHEHAB Mohamed Abed Hadi Rahman]
+  :alt_rev: [Rahman Hadi Abed Mohamed SHEHAB]
+  :alt_trim: [SHEHABMohamedAbedHadiRahman]
+  :alt_trim_rev: [RahmanHadiAbedMohamedSHEHAB]
 - :entity_number: '9715'
   :title:
   :call_sign:
@@ -211,6 +211,6 @@
   :addresses: []
   :ids: []
   :name_idx: JARRAR Khaledah
-  :rev_name: Khaledah JARRAR
-  :trim_name: JARRARKhaledah
-  :trim_rev_name: KhaledahJARRAR  
+  :name_rev: Khaledah JARRAR
+  :name_trim: JARRARKhaledah
+  :name_trim_rev: KhaledahJARRAR
